[package]
name = "pathfinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
build-binary = ["gtk4/v4_12"]

[dependencies]
anyhow = "1.0.75"
gtk4 = { version = "0.7.3", features = ["v4_12"], optional = true}
log = "0.4.20"
thiserror = "1.0.50"


[[bin]]
name = "pathfinder"
test = true
path = "src/bin/main.rs"
features = ["build-binary"]

